--- a/src/styles/markdown-article.css
+++ b/src/styles/markdown-article.css
@@ -14,13 +14,14 @@ h4, h5, h6 {
 }
 
 img {
+    width: var(--content-width);
     max-width: var(--content-width);
     height: auto;
 }
 
 p {
     margin: var(--row-height) 0;
-    padding: 0 var(--mobile-extra-spacing);
+    padding: 0 var(--content-extra-spacing);
 }
 
 p:nth-child(2) {
@@ -30,11 +31,12 @@ p:nth-child(2) {
 
 p:nth-child(2) img {
     width: var(--content-width);
+    max-width: var(--content-width);
 }
 
 ul {
     margin-left: 1.2rem;
-    padding: 0 var(--mobile-extra-spacing);
+    padding: 0 var(--content-extra-spacing);
 }
 
 ul li::marker {
@@ -58,7 +60,7 @@ blockquote p:last-child {
 
 footer {
     margin-top: calc(var(--content-spacing) * 2);
-    padding: 4px var(--mobile-extra-spacing);
+    padding: 4px var(--content-extra-spacing);
     font-family: anonymous, monospace;
     font-size: .8rem;
     line-height: .8rem;
